[package]
name = "macdisp"
version = "0.1.0"
edition = "2021"

[dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cc = "1.0"

[lib]
name = "macdisp"
path = "src/lib.rs"

[[bin]]
name = "macdisp"
path = "src/main.rs"
